--- a/vscode-ext/package.json
+++ b/vscode-ext/package.json
@@ -2,7 +2,7 @@
   "name": "wandelbots-nova",
   "displayName": "Wandelbots NOVA",
   "description": "Wandelbots NOVA VSCode Extension",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "publisher": "wandelbots",
   "engines": {
     "vscode": "^1.99.0"
@@ -69,6 +69,10 @@
         "command": "wandelbots-nova.readRobotPose",
         "title": "Wandelbots NOVA: Read robot pose",
         "icon": "$(location)"
+      },
+      {
+        "command": "wandelbots-nova.connectToNats",
+        "title": "Wandelbots NOVA: Connect to NATS"
       }
     ],
     "languages": [
@@ -143,11 +147,12 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "npm run typecheck && npm run lint && node esbuild.js",
+    "compile:app": "cd ./app && npm install && npm run build",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run typecheck && npm run lint && node esbuild.js --production",
-    "package:vscode": "npm run package && npx vsce package",
+    "package": "npm run typecheck && npm run lint && npm run compile:app && node esbuild.js --production",
+    "package:vscode": "npx vsce package",
     "pretest": "npm run test:compile && npm run compile && npm run lint",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
@@ -178,6 +183,7 @@
   "dependencies": {
     "@wandelbots/nova-api": "^25.7.0",
     "axios": "^1.11.0",
+    "nats": "^2.29.3",
     "url-join": "^5.0.0"
   }
 }
