--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "asyncua>=1.1.5,<2",
     "docstring-parser>=0.16.0",
     "exceptiongroup>=1.2.2",
-    "nats-py[jetstream]>=2.11.0",
+    "nats-py>=2.11.0",
     "blinker>=1.9.0",
 ]
 
