--- a/ruff.toml
+++ b/ruff.toml
@@ -38,7 +38,7 @@ target-version = "py310"
 
 [lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
-select = ["E4", "E7", "E9", "F", "UP006"]
+select = ["E4", "E7", "E9", "F", "UP006", "TID251"]
 ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
@@ -47,6 +47,15 @@ unfixable = []
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[lint.per-file-ignores]
+# Allow dev dependencies in test files, examples, benchmarks, and scripts
+"**/tests/**" = ["TID251"]
+"test_*.py" = ["TID251"]
+"examples/**" = ["TID251"]
+
+[lint.flake8-tidy-imports.banned-api]
+"icecream".msg = "icecream is a dev dependency and should not be used in production code. Use proper logging instead."
 
 [format]
 # Like Black, use double quotes for strings.
