--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,9 @@
       "type": "python",
       "request": "launch",
       "program": "${file}",
+      "args": [
+        "-v"
+      ],
       "console": "internalConsole",
       "justMyCode": false
     }  
