--- a/.github/workflows/pr-title-check.yaml
+++ b/.github/workflows/pr-title-check.yaml
@@ -14,7 +14,7 @@ jobs:
           echo "PR Title: $PR_TITLE"
 
           # Define the allowed pattern
-          PATTERN='^(chore|feat|fix)(!?)((\([A-Za-z0-9-]+\)))?: .+'
+          PATTERN='^(chore|feat|fix)((\([A-Za-z0-9-]+\)))?(!)?:.+'
 
           if [[ "$PR_TITLE" =~ $PATTERN ]]; then
             echo "✅ PR title is valid."
@@ -30,6 +30,9 @@ jobs:
             echo "- fix(scope): Description"
             echo ""
             echo "Scope can include letters, numbers, and hyphens."
-            echo "An optional '!' can be included before the ':' to indicate breaking changes."
+            echo "An optional '!' can be included after the scope but before the ':' to indicate breaking changes."
+            echo "Examples:"
+            echo "- feat(api)!: breaking change description"
+            echo "- feat!: breaking change without scope"
             exit 1
           fi
